--- a/nx.json
+++ b/nx.json
@@ -2,5 +2,6 @@
   "installation": {
     "version": "21.4.0"
   },
-  "$schema": "./node_modules/nx/schemas/nx-schema.json"
+  "$schema": "./node_modules/nx/schemas/nx-schema.json",
+  "nxCloudId": "68a6efbbd1b85da9b1f9be7d"
 }
